--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -215,6 +215,7 @@
       &--phone
         margin-bottom: 1rem
     &__input
+      border-bottom-color: $light
       &::placeholder
         color: rgba($light, 1)
         font-size: 1.49rem
